...
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Amount"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            <EditText
                android:id="@+id/edit_text_add_detailed_transaction_item_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <Space
            android:layout_width="0dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
    </LinearLayout>
        <AutoCompleteTextView
            android:id="@+id/edit_text_add_detailed_transaction_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Category"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
    <Spinner
        android:id="@+id/spinner_add_detailed_transaction_item_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/text_view_add_detailed_transaction_show_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_view_add_detailed_transaction_item_show_details"
            android:layout_width="wrap_content"
...
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/image_view_add_detailed_transaction_item_add_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Add image to item"
            android:src="@drawable/baseline_add_photo_alternate_24"/>
            <TextView
                android:id="@+id/text_view_add_detailed_transaction_item_image_count"
...
