...
        android:layout_height="wrap_content"
        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
        android:maxLines="2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/image_view_transaction_item_category"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_view_transaction_item_first_image"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>
    <TextView
        android:id="@+id/text_view_transaction_item_store"
        android:layout_width="wrap_content"
...
        app:layout_constraintTop_toBottomOf="@id/text_view_transaction_item_description"
        app:layout_constraintEnd_toStartOf="@id/image_view_transaction_item_first_image"/>
    <ImageView
        android:id="@+id/image_view_transaction_item_first_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toStartOf="@id/text_view_transaction_item_amount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:src="@tools:sample/avatars"
        tools:visibility="gone"
        android:contentDescription="Main Image" />
    <TextView
...
